--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.31.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.31.0",
+    "@typescript-eslint/parser": "^5.33.1",
     "@vitejs/plugin-react": "^2.0.0",
     "cross-env": "7.0.3",
     "electron": "19.0.10",
