--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
   },
   "devDependencies": {
+    "@types/ip": "^1.1.0",
+    "@types/node": "^18.7.7",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "5.31.0",
@@ -39,11 +42,19 @@
     "cross-env": "7.0.3",
     "electron": "19.0.10",
     "electron-builder": "23.3.3",
+    "electron-store": "^8.0.2",
     "eslint": "8.20.0",
+    "eslint-plugin-react": "^7.30.1",
+    "firebase-admin": "^11.0.0",
     "happy-dom": "6.0.4",
+    "ip": "^1.1.8",
+    "jsonwebtoken": "^8.5.1",
     "nano-staged": "0.8.0",
+    "parse-url": "^7.0.2",
     "playwright": "1.24.2",
+    "qrcode": "^1.5.1",
     "simple-git-hooks": "2.8.0",
+    "styled-components": "^5.3.5",
     "typescript": "4.7.4",
     "unplugin-auto-expose": "0.0.2",
     "vite": "3.0.4",
