--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
-    "build": "npm run build:main && npm run build:preload && npm run build:renderer",
+    "build": "npm run build:main && npm run build:preload && npm run build:renderer ",
     "build:main": "cd ./packages/main && vite build",
     "build:preload": "cd ./packages/preload && vite build",
     "build:renderer": "cd ./packages/renderer && vite build",
@@ -42,27 +42,27 @@
     "cross-env": "7.0.3",
     "electron": "19.0.10",
     "electron-builder": "23.3.3",
-    "electron-store": "^8.0.2",
     "eslint": "8.20.0",
     "eslint-plugin-react": "^7.30.1",
-    "firebase-admin": "^11.0.0",
     "happy-dom": "6.0.4",
-    "ip": "^1.1.8",
-    "jsonwebtoken": "^8.5.1",
     "nano-staged": "0.8.0",
-    "parse-url": "^7.0.2",
     "playwright": "1.24.2",
-    "qrcode": "^1.5.1",
     "simple-git-hooks": "2.8.0",
-    "styled-components": "^5.3.5",
     "typescript": "4.7.4",
     "unplugin-auto-expose": "0.0.2",
     "vite": "3.0.4",
     "vitest": "0.20.2"
   },
   "dependencies": {
+    "electron-store": "^8.0.2",
     "electron-updater": "5.2.1",
+    "firebase-admin": "^11.0.0",
+    "ip": "^1.1.8",
+    "jsonwebtoken": "^8.5.1",
+    "parse-url": "^7.0.2",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
   }
 }
