--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "test:preload": "vitest run -r packages/preload --passWithNoTests",
     "test:renderer": "vitest run -r packages/renderer --passWithNoTests",
     "watch": "node scripts/watch.mjs",
-    "lint": "eslint . --ext js,ts,vue",
+    "lint": "eslint . --ext js,ts,",
     "typecheck:main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck:preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck:renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
+    "typecheck:renderer": "tsc --noEmit -p packages/renderer/tsconfig.json",
     "typecheck": "npm run typecheck:main && npm run typecheck:preload && npm run typecheck:renderer",
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
   },
@@ -36,6 +36,8 @@
     "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "^5.33.1",
     "@vitejs/plugin-react": "^2.0.0",
@@ -54,6 +56,7 @@
     "vitest": "0.20.2"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.4.7",
     "electron-store": "^8.0.2",
     "electron-updater": "5.2.1",
     "firebase-admin": "^11.0.0",
@@ -63,6 +66,7 @@
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   }
 }
