--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "isolatedModules": true,
     "jsx": "preserve",
-
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "types": ["node"],
     "baseUrl": ".",
     "paths": {
