separate responsabiltites of windows and trays

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,6 @@
     /**
      * Just for beauty
      */
-    "quotes": ["warn", "single", { "avoidEscape": true }]
+    "quotes": ["warn", "double", { "avoidEscape": true }]
   }
 }
