--- a/package.json
+++ b/package.json
@@ -56,16 +56,22 @@
     "vitest": "0.20.2"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.8",
+    "@chakra-ui/react": "^2.2.8",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@lottiefiles/react-lottie-player": "^3.4.7",
     "electron-store": "^8.0.2",
     "electron-updater": "5.2.1",
     "firebase-admin": "^11.0.0",
+    "framer-motion": "^7.2.0",
     "ip": "^1.1.8",
     "jsonwebtoken": "^8.5.1",
     "parse-url": "^7.0.2",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   }
