--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@chakra-ui/react": "^2.2.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fontsource/roboto": "^4.5.8",
     "@lottiefiles/react-lottie-player": "^3.4.7",
     "electron-store": "^8.0.2",
     "electron-updater": "5.2.1",
