edit options layout ok

--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -16,6 +16,6 @@
       "/@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "../../types/**/*.d.ts"],
+  "include": ["src/**/*.ts", "../../types/**/*.d.ts", "../../types/enums.ts"],
   "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
