--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -23,7 +23,8 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "types/**/*.d.ts",
-    "../../types/**/*.d.ts"
+    "../../types/**/*.d.ts",
+    "../../types/enums.ts"
   ],
   "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
