add reset configs button and change the authetication modal to create a pass if not exists

--- a/packages/preload/tsconfig.json
+++ b/packages/preload/tsconfig.json
@@ -8,16 +8,10 @@
     "strict": true,
     "isolatedModules": true,
 
-    "types" : ["node"],
+    "types": ["node"],
 
-    "baseUrl": ".",
+    "baseUrl": "."
   },
-  "include": [
-    "src/**/*.ts",
-    "../../types/**/*.d.ts"
-  ],
-  "exclude": [
-    "**/*.spec.ts",
-    "**/*.test.ts"
-  ]
+  "include": ["src/**/*.ts", "../../types/**/*.d.ts", "../../types/**/*.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
