--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -24,7 +24,7 @@
     "src/**/*.tsx",
     "types/**/*.d.ts",
     "../../types/**/*.d.ts",
-    "../../types/enums.ts"
+    "../../types/**/*.ts"
   ],
   "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
