--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "framer-motion": "^7.2.0",
     "ip": "^1.1.8",
     "jsonwebtoken": "^8.5.1",
+    "node-machine-id": "^1.1.12",
     "parse-url": "^7.0.2",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
