--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/ip": "^1.1.0",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^18.7.7",
     "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.15",
@@ -64,6 +65,7 @@
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^4.5.8",
     "@lottiefiles/react-lottie-player": "^3.4.7",
+    "aws-sdk": "^2.1218.0",
     "cors": "^2.8.5",
     "electron-store": "^8.0.2",
     "electron-updater": "5.2.1",
@@ -72,6 +74,7 @@
     "framer-motion": "^7.2.0",
     "ip": "^1.1.8",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
     "node-machine-id": "^1.1.12",
     "parse-url": "^7.0.2",
     "qrcode": "^1.5.1",
