--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 node_modules
 .DS_Store
 dist
-certificates/**
+certificates
 *.local
 thumbs.db
-firebase.json
-firebase_ok.json
 
 .eslintcache
 .browserslistrc
