Add whatsapp integrated service and UI

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data7-manager",
+  "name": "data7-manager_2",
   "description": "Data7 Manager",
   "version": "2.0.5",
   "private": true,
@@ -32,14 +32,17 @@
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/ip": "^1.1.0",
     "@types/mime-types": "^2.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.7",
     "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sharp": "^0.31.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "^5.33.1",
@@ -66,22 +69,29 @@
     "@fontsource/roboto": "^4.5.8",
     "@lottiefiles/react-lottie-player": "^3.4.7",
     "aws-sdk": "^2.1218.0",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "electron-store": "^8.0.2",
     "electron-updater": "5.2.1",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.0",
+    "form-data": "^4.0.0",
     "framer-motion": "^7.2.0",
     "ip": "^1.1.8",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
     "node-machine-id": "^1.1.12",
     "parse-url": "^7.0.2",
+    "puppeteer-core": "^18.0.4",
+    "puppeteer-in-electron": "^3.0.5",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "sharp": "^0.31.1",
+    "styled-components": "^5.3.5",
+    "whatsapp-web-electron.js": "^1.16.6-2"
   }
 }
