add a function to set value and your dependencies in the storage handled by main side

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data7-manager_2",
+  "name": "data7-manager",
   "description": "Data7 Manager",
   "version": "2.0.5",
   "private": true,
