--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "data7-manager",
   "description": "Data7 Manager",
-  "version": "2.0.5",
+  "version": "2.1.0",
   "private": true,
   "repository": "https://github.com/matheusdevelope/data7-manager",
   "author": {
@@ -79,6 +79,7 @@
     "framer-motion": "^7.2.0",
     "ip": "^1.1.8",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "node-machine-id": "^1.1.12",
