--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/cors": "^2.8.12",
+    "@types/cors": "^2.8.13",
     "@types/ip": "^1.1.0",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
@@ -92,6 +92,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "sharp": "^0.31.1",
+    "socket.io": "^4.6.0",
     "styled-components": "^5.3.5",
     "whatsapp-web-electron.js": "^1.16.6-2"
   }
